--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,91 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./scss/variables.scss";
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body * {
+  padding: 0;
+  margin: 0;
+}
+
+html, body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  position: relative;
+}
+
+// Forms general styles
+.form {
+  padding: 2rem 4rem;
+  -webkit-box-shadow: 0px 0px 13px 5px rgba(0,0,0,0.59);
+  box-shadow: 0px 0px 13px 5px rgba(0,0,0,0.59);
+
+  &__field {
+    margin-bottom: 2.5rem;
+  }
+
+  & legend {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    color: $primary-color-dark;
+    font-weight: 600;
+  }
+
+  & label {
+    width: 100%;
+    display: block;
+  }
+
+  & input {
+    width: 100%;
+    height: 4rem;
+    background-color: white;
+    border-style: none;
+    outline: none;
+    padding-left: 1rem;
+    border-bottom: .2rem solid $primary-color;
+    font-size: 1.4rem;
+    cursor: text;
+    transition: all .3s ease;
+    color: $primary-color-dark
+  }
+
+  & input::placeholder {
+    color: $primary-color;
+  }
+
+  & input:focus {
+    background-color: $light-bg;
+  }
+}
+
+// Button styles
+.button {
+  display: block;
+  padding: .6rem 1.6rem;
+  border: none;
+  background-color: $primary-color;
+  border: .2rem solid $primary-color;
+  color: white;
+  font-weight: 600;
+  margin: 0 auto;
+  cursor: pointer;
+  transition: all .3s ease;
+}
+
+.button:hover {
+  background-color: white;
+  border: .2rem solid $primary-color;
+  color: $primary-color;
+}
