Files, Users and Uploads functionality

--- a/src/app/_layout/footer/footer.component.scss
+++ b/src/app/_layout/footer/footer.component.scss
@@ -1,6 +1,7 @@
 .footer {
-  position: absolute;
-  bottom: 0;
+  // position: absolute;
+  // bottom: 0;
   background-color: palevioletred;
   width: 100%;
+  z-index: 100;
 }
