--- a/src/app/_layout/navigation/navigation.component.html
+++ b/src/app/_layout/navigation/navigation.component.html
@@ -1,3 +1,27 @@
 <nav class="navigation">
-  <p>navigation works!</p>
+  <a routerLink="/files" class="link-elem">
+    <div class="link-elem__image">
+      <img src="../../../assets/files-icon.svg" alt="files icon">
+    </div>
+    <div class="link-elem__text">Files</div>
+  </a>
+  <a routerLink="/users" class="link-elem">
+    <div class="link-elem__image">
+      <img src="../../../assets/users-icon.svg" alt="users icon">
+    </div>
+    <div class="link-elem__text">Users</div>
+  </a>
+  <a routerLink="/upload" class="link-elem">
+    <div class="link-elem__image">
+      <img src="../../../assets/upload-icon.svg" alt="upload icon">
+    </div>
+    <div class="link-elem__text">Upload</div>
+  </a>
+
+  <div class="link-elem">
+    <div class="link-elem__image">
+      <img src="../../../assets/log-out-icon.svg" alt="log out icon">
+    </div>
+    <div class="link-elem__text">Log-out</div>
+  </div>
 </nav>
