--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,4 +1,8 @@
 $primary-color: #881fff;
+$primary-color-light: #5b14ac;
 $primary-color-dark: rgb(9, 5, 68);
+
+$error-color: rgb(255, 81, 81);
+$success-color: rgb(59, 255, 124);
 
 $light-bg: rgb(238, 238, 238);
