--- a/src/app/_layout/header/header.component.scss
+++ b/src/app/_layout/header/header.component.scss
@@ -1,3 +1,14 @@
+@import "../../../scss/variables.scss";
+
 .header {
-  background-color: palegreen;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  padding-left: 2rem;
+
+  & h1 {
+    padding: 0;
+    margin: 0;
+    font-weight: bold;
+  }
 }
