--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./scss/variables.scss";
+@import "./scss/mixins.scss";
 
 html {
   box-sizing: border-box;
@@ -10,18 +11,62 @@ html {
   box-sizing: inherit;
 }
 
-body * {
+* {
   padding: 0;
   margin: 0;
 }
 
-html, body {
-  height: 100%;
-}
 body {
   margin: 0;
+  padding: 0;
+  height: 100vh;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   position: relative;
+  overflow: hidden;
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+
+a, a:visited {
+  color: white;
+  text-decoration: none;
+  display: block;
+}
+
+// helpers
+.success-color {
+  color: $success-color;
+}
+
+.error-color {
+  color: $error-color;
+}
+
+// Material styles
+.mat-dialog-container {
+  border-radius: 2.5rem !important;
+}
+
+.cdk-overlay-dark-backdrop {
+  background: rgba(0,0,0,.70);
+}
+
+
+// General content styles
+.content {
+  margin-left: 18rem;
+  height: calc(100% - 5rem); // 5 rem is the height of the Header
+  overflow-y: scroll;
+  transition: all .3s ease;
+  position: relative;
+
+
+  @include responsive(phone) {
+    margin-left: 6rem;
+  }
 }
 
 // Forms general styles
@@ -31,7 +76,8 @@ body {
   box-shadow: 0px 0px 13px 5px rgba(0,0,0,0.59);
 
   &__field {
-    margin-bottom: 2.5rem;
+    // margin-bottom: 2.5rem;
+    height: 7.5rem;
   }
 
   & legend {
@@ -47,7 +93,7 @@ body {
     display: block;
   }
 
-  & input {
+  & input, & select {
     width: 100%;
     height: 4rem;
     background-color: white;
@@ -61,6 +107,11 @@ body {
     color: $primary-color-dark
   }
 
+  & select {
+    cursor: default;
+    border: .2rem solid $primary-color;
+  }
+
   & input::placeholder {
     color: $primary-color;
   }
@@ -68,6 +119,23 @@ body {
   & input:focus {
     background-color: $light-bg;
   }
+}
+
+// Form errors styles
+.form-messages {
+  font-size: 1rem;
+  font-weight: bold;
+  &__error {
+    color: $error-color;
+  }
+}
+
+// Disabled styles
+.disabled, .disabled:hover {
+  background: rgba(204, 204, 204, 0.699) !important;
+  border-color: rgba(204, 204, 204, 0.699) !important;
+  color: white !important;
+  cursor: default !important;
 }
 
 // Button styles
@@ -79,7 +147,6 @@ body {
   border: .2rem solid $primary-color;
   color: white;
   font-weight: 600;
-  margin: 0 auto;
   cursor: pointer;
   transition: all .3s ease;
 }
