--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./scss/variables.scss";
 @import "./scss/mixins.scss";
+@import "./scss/animations.scss";
 
 html {
   box-sizing: border-box;
@@ -45,6 +46,14 @@ a, a:visited {
   color: $error-color;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
+.active-link {
+  background-color: $primary-color-light;
+}
+
 // Material styles
 .mat-dialog-container {
   border-radius: 2.5rem !important;
@@ -54,26 +63,29 @@ a, a:visited {
   background: rgba(0,0,0,.70);
 }
 
+.mat-progress-bar-fill::after {
+  background-color: $primary-color;
+}
+
 
 // General content styles
 .content {
   margin-left: 18rem;
-  height: calc(100% - 5rem); // 5 rem is the height of the Header
-  overflow-y: scroll;
+  height: calc(100% - 6rem); // 5 rem is the height of the Header
+  // overflow-y: scroll;
   transition: all .3s ease;
   position: relative;
 
 
   @include responsive(phone) {
     margin-left: 6rem;
+    width: calc(100% - 6rem);
   }
 }
 
 // Forms general styles
 .form {
   padding: 2rem 4rem;
-  -webkit-box-shadow: 0px 0px 13px 5px rgba(0,0,0,0.59);
-  box-shadow: 0px 0px 13px 5px rgba(0,0,0,0.59);
 
   &__field {
     // margin-bottom: 2.5rem;
@@ -130,6 +142,17 @@ a, a:visited {
   }
 }
 
+.form-bottom-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 4.5rem;
+
+  &--horizontal {
+    flex-direction: row;
+  }
+}
+
 // Disabled styles
 .disabled, .disabled:hover {
   background: rgba(204, 204, 204, 0.699) !important;
@@ -149,10 +172,77 @@ a, a:visited {
   font-weight: 600;
   cursor: pointer;
   transition: all .3s ease;
+  outline: none;
+  border-radius: .5rem;
+  font-size: 1.4rem;
+
+  &--cancel {
+    background-color: $error-color;
+    border-color: $error-color;
+
+    &:hover {
+      background-color: white;
+      border-color: $error-color !important;
+      color: $error-color !important;
+    }
+  }
 }
 
 .button:hover {
   background-color: white;
   border: .2rem solid $primary-color;
   color: $primary-color;
+}
+
+// Scrollable container
+.scrollable {
+  height: 100%;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+
+  &::-webkit-scrollbar {
+    width: .5rem;
+    background-color: $light-bg;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgb(189, 189, 189);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+  }
+
+  // &::-webkit-scrollbar-thumb:window-inactive {
+  //   background: grey;
+  // }
+}
+
+// Notifications
+.notification {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  color: white;
+  font-weight: bold;
+  width: 25rem;
+  padding: 1rem 2rem;
+  border-top-left-radius: 1.6rem;
+  animation: bottom-to-up .3s ease;
+
+  &--error {
+    background-color: $error-color;
+  }
+  &--success {
+    background-color: $primary-color-dark;
+  }
 }
