--- a/src/app/_layout/header/header.component.scss
+++ b/src/app/_layout/header/header.component.scss
@@ -1,14 +1,18 @@
 @import "../../../scss/variables.scss";
 
 .header {
-  height: 5rem;
+  height: 6rem;
   display: flex;
   align-items: center;
-  padding-left: 2rem;
+  padding-left: 3rem;
+
+  -webkit-box-shadow: 0px 0px 5px 0px rgba($primary-color-dark,0.59);
+  box-shadow: 0px 0px 5px 0px rgba($primary-color-dark,0.59);
 
   & h1 {
     padding: 0;
     margin: 0;
     font-weight: bold;
+    font-size: 3rem;
   }
 }
