--- a/src/app/files/file-card/file-card.component.html
+++ b/src/app/files/file-card/file-card.component.html
@@ -2,9 +2,14 @@
   <div class="file-card__image"
   [ngStyle]="{'background-image': isImage ? 'url(' + file.path + ')' : ''}"
   [ngClass]="!isImage ? 'file-card__image--' + file.file_type : ''"
+  (click)="cardClick()"
   ></div>
-  <div class="file-card__info">
-    <p><strong>Uploaded by:</strong> {{ file.propetary }}</p>
-    <p><strong>Uploaded at:</strong> {{ file.created_at }}</p>
+
+
+  <div class="file-card__text file-card__text--author">
+    <strong>Uploaded by:</strong> {{ file.propetary }}
+  </div>
+  <div class="file-card__text file-card__text--date">
+    <strong>Uploaded at:</strong> {{ file.created_at }}
   </div>
 </a>
