--- a/src/app/files/file-list/file-list.component.html
+++ b/src/app/files/file-list/file-list.component.html
@@ -1,7 +1,15 @@
-<div class="file-list">
-    <app-file-card
-    *ngFor="let file of files"
-    [file]=file
-    (click)='getFile(file)'
-    ></app-file-card>
+<div
+class="scrollable"
+infiniteScroll
+[scrollWindow]=false
+[infiniteScrollThrottle]=100
+(scrolled)="onScrollDown($event)">
+
+  <div class="file-list">
+      <app-file-card
+      *ngFor="let file of files"
+      [file]=file
+      (click)='getFile(file)'
+      ></app-file-card>
+  </div>
 </div>
