--- a/src/app/users/user-list/user-list.component.scss
+++ b/src/app/users/user-list/user-list.component.scss
@@ -3,12 +3,18 @@
 
 .user-list {
   width: 90%;
-  margin: 0 auto;
+  margin: 2rem auto 0 auto;
 
   &__info {
     margin-bottom: 3rem;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
+
+    & h1 {
+      font-weight: bold;
+      padding: 0;
+    }
 
     & .button {
       justify-self: flex-end;
@@ -34,7 +40,32 @@
       border-bottom: 2px solid $light-bg;
     }
 
+    & .email {
+      @include responsive(phone-s) {
+        display: none;
+      }
+    }
+
+    & .role {
+      max-width: 6.5rem;
+      width: 6.5rem;
+    }
+
+    & .date {
+      @include responsive(tablet) {
+        display: none;
+      }
+    }
+
+    & .actions {
+      @include responsive(tablet) {
+        max-width: 6rem;
+        width: 6rem;
+      }
+    }
+
   }
+
   &__icon { // img tag
     display: inline-block;
     height: 3rem;
