--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,4 +1,10 @@
 @mixin responsive($breakpoint) {
+  @if $breakpoint == phone-s {
+    @media (max-width: 500px) {
+      @content
+    };
+  }
+
   @if $breakpoint == phone {
     @media (max-width: 700px) {
       @content
@@ -12,7 +18,7 @@
   }
 
   @if $breakpoint == tablet-l {
-    @media (max-width: 1200px) {
+    @media (max-width: 1300px) {
       @content
     };
   }
